# moos-ivp-cc

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  README  README.md  build.sh  clean.sh  docker-entrypoint.sh
docs/manifests/: moos-ivp-cc.mfs
missions/alder/: alder.bhv
missions/alder-test/: alder.bhv
missions/back-sim/: back.moos  launch.sh
missions/docker/: meta_vehicle.bhv  plug_pShare.moos  plug_uFldNodeBroker.moos  run_docker.sh
missions/docker-example/shoreside/: shoreside.moos
missions/docker-example/vehicle/: alpha.bhv
missions/docker-multicast/: launch.sh  meta_shoreside.moos  plug_pLogger.moos  plug_uProcessWatch.moos  run_docker.sh
missions/dockerv2/shoreside/: clean.sh  launch.sh  shoreside.moos
missions/dockerv2/vehicle/: alpha.moos  launch.sh
missions/front-sim/: alpha.bhv  alpha.moos  clean.sh  launch.sh
missions/gazebo-sim/: README.md  Vagrantfile  alpha.bhv  alpha.moos  clean.sh  launch.sh
missions/lab_06/bravo_loiter_uuv/: bravo.bhv
missions/lab_06/bravo_uuv_surface/: bravo.bhv  bravo.moos
missions/lab_07/alpha_bravo_pshare/: bravo.bhv  shoreside.moos
missions/lab_07/alpha_pshare/: shoreside.moos
missions/lab_07/distributed_tsp/: meta_shoreside.moos  meta_vehicle.moos  targ_gilda.bhv  targ_gilda.moos  targ_henry.bhv  targ_henry.moos  targ_shoreside.moos
missions/lab_07/henry_gilda_auto_refuel/: launch.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_uProcessWatch.moos
missions/lab_07/henry_gilda_baseline/: clean.sh  meta_vehicle.bhv
missions/lab_07/henry_gilda_refuel/: plug_pLogger.moos
missions/lab_07/xrelay-share/: pears.moos
missions/lab_08/distributed_tsp_replan/: launch_vehicle.sh  plug_pHostInfo.moos  plug_uFldNodeBroker.moos
missions/lab_08/lab_08_baseline/: launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_pHostInfo.moos  plug_pLogger.moos
missions/lab_09/charlie_dana_baseline/: meta_shoreside.moos  meta_vehicle.moos  plug_pShare.moos
missions/lab_09/charlie_dana_message/: meta_vehicle.moos
missions/lab_09/charlie_dana_nodecomms/: plug_pLogger.moos
missions/lab_09/charlie_dana_reassign/: launch.sh  meta_vehicle.moos  plug_uFldNodeBroker.moos
missions/m10_jake/: hazards_01.txt  launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_vehicle.bhv  plug_pLogger.moos  plug_pShare.moos  plug_uFldMessageHandler.moos  plug_uFldNodeBroker.moos
missions/seabyte/: launch.sh  seabyte.bhv
missions/seebyte/: .env  README.md  docker-compose.yml  exampleMessages.txt  launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_seebyte.moos  meta_shoreside.moos  mission.kml  obstacles.txt  obstacles_dynamic.txt  plug_marineviewer.moos  plug_origin_warp.moos  plug_shore.moos  seebyte.bhv  seebyte.moos
missions/seebyte-sim/: launch.sh  neptune.moos
missions/xrelay/: xrelay.moos
scripts/: README
src/: CMakeLists.txt
src/iGazebo/: CMakeLists.txt  iGazebo.cpp  iGazebo.h  iGazebo_Info.cpp  iGazebo_Info.h  main.cpp
src/iMumbleClient/: CMakeLists.txt  MumbleCallbackHandler.cpp  MumbleCallbackHandler.h  MumbleClient.cpp  MumbleClient.h  MumbleClient_Info.cpp  MumbleClient_Info.h  README.md  SimpleRingBuffer.h  iMumbleClient.moos  main.cpp
src/iNeptune/: CMakeLists.txt  LooseNinja.cpp  LooseNinja.h  NMEAUtils.cpp  NMEAUtils.h  Neptune.cpp  Neptune.h  Neptune_Info.cpp  Neptune_Info.h  Socket.cpp  Socket.h  attic.cpp  iNeptune.moos  main.cpp
src/lib_behaviors-test/: AOF_SimpleWaypoint.cpp  AOF_SimpleWaypoint.h  BHV_Pulse.cpp  BHV_Pulse.h  BHV_SimpleWaypoint.cpp  BHV_SimpleWaypoint.h  BHV_ZigLeg.cpp  BHV_ZigLeg.h  CMakeLists.txt  README
src/lib_gazebo_moos/: CMakeLists.txt  gazebo_moos.cc  gazebo_moos.hh  iGazebo.cpp  iGazebo.h
src/lib_sock_utils/: CMakeLists.txt  SockNinja.cpp  SockNinja.h
src/pAnnounceMail/: AnnounceMail.cpp  AnnounceMail.h  AnnounceMail_Info.cpp  AnnounceMail_Info.h  CMakeLists.txt  main.cpp  pAnnounceMail.moos
src/pExampleApp/: CMakeLists.txt  ExampleApp.h  main.cpp
src/pGenPath/: CMakeLists.txt  GenPath.cpp  GenPath.h  GenPath_Info.cpp  GenPath_Info.h  main.cpp  pGenPath.moos
src/pNeptuneSim/: CMakeLists.txt  NeptuneSim.cpp  NeptuneSim.h  NeptuneSim_Info.cpp  NeptuneSim_Info.h  Socket.h  main.cpp  uNeptuneSim.moos
src/pOdometry/: CMakeLists.txt  Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp  pOdometry.moos
src/pPointAssign/: CMakeLists.txt  PointAssign.cpp  PointAssign.h  PointAssign_Info.cpp  PointAssign_Info.h  main.cpp  pPointAssign.moos
src/pPrimeFactor/: CMakeLists.txt  PrimeFactor.cpp  PrimeFactor.h  PrimeFactorEntry.cpp  PrimeFactorEntry.h  PrimeFactor_Info.cpp  PrimeFactor_Info.h  main.cpp  pPrimeFactor.moos
src/pPrimeFactorTester/: CMakeLists.txt  PrimeFactorTester.cpp  PrimeFactorTester.h  PrimeFactorTester_Info.cpp  PrimeFactorTester_Info.h  main.cpp  pPrimeFactorTester.moos
src/pWebSocketServer/: CMakeLists.txt  SimpleRingBuffer.h  WebSocketClient.cpp  WebSocketClient.h  WebSocketServer.cpp  WebSocketServer.h  WebSocketServer_Info.cpp  WebSocketServer_Info.h  index.html  main.cpp  pWebSocketServer.moos
src/pXRelayTest/: CMakeLists.txt  Relayer.cpp  Relayer.h  Relayer_Info.cpp  Relayer_Info.h  main.cpp  pXRelayTest.moos
src/uBackNMEABridge/: BackNMEABridge.cpp  BackNMEABridge.h  BackNMEABridge_Info.cpp  BackNMEABridge_Info.h  CMakeLists.txt  Socket.cpp  Socket.h  main.cpp  uBackNMEABridge.moos
src/uFldHazardMgrX/: CMakeLists.txt  HazardMgrX.cpp  HazardMgrX.h  HazardMgrX_Info.cpp  HazardMgrX_Info.h  main.cpp  uFldHazardMgr.moos
src/uFrontNMEABridge/: CMakeLists.txt  FrontNMEABridge.cpp  FrontNMEABridge.h  FrontNMEABridge_Info.cpp  FrontNMEABridge_Info.h  Socket.cpp  Socket.h  TCPConnection.cpp  TCPConnection.h  TCPServer.cpp  TCPServer.h  main.cpp  uFrontNMEABridge.moos
src/uRaspiMon/: CMakeLists.txt  RaspiMon.cpp  RaspiMon.h  RaspiMon_Info.cpp  RaspiMon_Info.h  VCGenCmd.cpp  VCGenCmd.h  main.cpp  uRaspiMon.moos
src/uVcGenMon/: CMakeLists.txt  VCGenCmd.cpp  VcGenMon.cpp  VcGenMon.h  VcGenMon_Info.cpp  VcGenMon_Info.h  main.cpp  uVcGenMon.moos
(+78 files in other folders)
